force-app/main/default/objects/Stop_Bang_Questionnaire__c/Stop_Bang_Questionnaire__c.object-meta.xml
<CustomObject>
    <label>Stop Bang Questionnaire</label>
    <nameField>
        <label>Stop Bang Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stop Bang Questionnaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>