force-app/main/default/objects/Stop_Bang_Questionnaire__c/fields/Feels_Tired__c.field-meta.xml
<CustomField>
    <fullName>Feels_Tired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Feels Tired</label>
    <type>Checkbox</type>
</CustomField>