force-app/main/default/objects/Stop_Bang_Questionnaire__c/fields/High_Blood_Pressure__c.field-meta.xml
<CustomField>
    <fullName>High_Blood_Pressure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High Blood Pressure</label>
    <type>Checkbox</type>
</CustomField>