force-app/main/default/objects/Stop_Bang_Questionnaire__c/fields/Is_Male__c.field-meta.xml
<CustomField>
    <fullName>Is_Male__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Male</label>
    <type>Checkbox</type>
</CustomField>