force-app/main/default/objects/Stop_Bang_Questionnaire__c/fields/Is_Over_35__c.field-meta.xml
<CustomField>
    <fullName>Is_Over_35__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Over 35</label>
    <type>Checkbox</type>
</CustomField>