force-app/main/default/objects/Stop_Bang_Questionnaire__c/fields/Neck_Over_40cm__c.field-meta.xml
<CustomField>
    <fullName>Neck_Over_40cm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Neck Over 40cm</label>
    <type>Checkbox</type>
</CustomField>