force-app/main/default/objects/Stop_Bang_Questionnaire__c/fields/Observed_Not_Breathing__c.field-meta.xml
<CustomField>
    <fullName>Observed_Not_Breathing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Observed Not Breathing</label>
    <type>Checkbox</type>
</CustomField>